Fixed project text centering, added back button to make closing project views easier on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -58,4 +58,7 @@
       @apply text-center text-white font-bold text-xl
     }
 
+    .button {
+      @apply bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded
+    }
 }
